network.json
{
   "$schema":"https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
   "contentVersion":"1.0.0.0",
   "parameters":{
      "virtualNetworkName":{
          "type": "string",
          "defaultValue":"vnet"
      },
      "vnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.0/24",
         "metadata":{
            "description":"The address space for the virtual network"
         }
      },
      "gwsnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.80/28",
         "metadata":{
            "description":"The address space for gateway subnet network"
         }
      },
      "appGatewayPrefix":{
         "type":"string",
         "defaultValue":"app-gtw",
         "metadata":{
            "description":""
         }
      },
      "websnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.128/27",
         "metadata":{
            "description":"The address space for web subnet network"
         }
      },
      "webPrefix":{
         "type":"string",
         "defaultValue":"web",
         "metadata":{
            "description":""
         }
      },
      "analyticsPrefix":{
         "type":"string",
         "defaultValue":"analytics",
         "metadata":{
            "description":""
         }
      },
      "analyticsnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.192/28",
         "metadata":{
            "description":"The address space for management subnet network"
         }
      },
      "bastionsnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.0/28",
         "metadata":{
            "description":"The address space for web subnet network"
         }
      },
       "BastionPrefix":{
         "type":"string",
         "defaultValue":"bastion",
         "metadata":{
            "description":""
         }
      },
      "sftpsnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.48/28",
         "metadata":{
            "description":"The address space for management subnet network"
         }
      },
       "sftpPrefix":{
         "type":"string",
         "defaultValue":"sftp-config",
         "metadata":{
            "description":""
         }
      },
      "dataintegrationsnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.64/28",
         "metadata":{
            "description":"The address space for web subnet network"
         }
      },
       "dataIntegrationPrefix":{
         "type":"string",
         "defaultValue":"data-integration",
         "metadata":{
            "description":""
         }
      },
      "appsnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.96/27",
         "metadata":{
            "description":"The address space for management subnet network"
         }
      },
       "appPrefix":{
         "type":"string",
         "defaultValue":"app",
         "metadata":{
            "description":""
         }
      },
      "dbsnetaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.160/27",
         "metadata":{
            "description":"The address space for web subnet network"
         }
      },
       "DBPrefix":{
         "type":"string",
         "defaultValue":"db",
         "metadata":{
            "description":""
         }
      },
      "iamconfigaddressPrefix":{
         "type":"string",
         "defaultValue":"10.199.254.32/28",
         "metadata":{
            "description":"The address space for web subnet network"
         }
      },
       "IamConfigPrefix":{
         "type":"string",
         "defaultValue":"iam-config",
         "metadata":{
            "description":""
         }
      },
      "natgatewayname": {
        "defaultValue": "AppNatGateway",
        "type": "String",
        "metadata": {
            "description": "Name of the NAT gateway"
        }
      },
       "ConnectBastionIpname": {
         "defaultValue": "myPublicIP",
         "type": "String",
         "metadata": {
         "description": "Name of the NAT gateway public IP"
         }
      },
      "ClientIpname": {
         "defaultValue": "myPublicIPVM",
         "type": "String",
         "metadata": {
         "description": "Name of the virtual machine public IP"
         }
      },
      "bastionName": {
         "defaultValue": "BastionService",
         "type": "String",
         "metadata": {
               "description": "Name of the Bastion Service"
        }
      },
      "publicIpAddressForNatGateway": {
         "type": "String",
         "defaultValue":"NatGatewayPublicIP",
         "metadata": {
         "description": "IP Addresss of the Nat Gateway"
        }
      },
      "publicIpAddressForBastion": {
         "type": "String",
         "defaultValue":"BastionServicePublicIP",
         "metadata": {
         "description": "IP Addresss of the Bastion Service"
        }
      },
      // "ddosProtectionPlanName": {
      //    "type": "string",
      //    "metadata": {
      //    "description": "Specify a DDoS protection plan name."
      //    }
      // },
      //  "ddosProtectionPlanEnabled": {
      //    "type": "bool",
      //    "defaultValue": "false" 
      // },
      "applicationGatewayName": {
         "type": "string",
         "defaultValue":"App-gw"
      },
      "AppGatewayTier": {
         "type": "string",
         "defaultValue":"WAF"
      },
      "AppGatewaySkuSize": {
         "type": "string",
         "defaultValue":"WAF_Medium"
      },
      // "AppGatewayAutoScaleMinCapacity": {
      //    "type": "int",
      //    "defaultValue": "2"
      // },
      "publicIpAddressGateway": {
         "type": "string",
         "defaultValue":"AppGatewayPublicIP"
      },
      // "AppGatewayAutoScaleMaxCapacity": {
      //    "type": "int",
      //    "defaultValue":"10"
      // },
      "AppGatewayCapacity":{
         "type": "int",
         "defaultValue":2
     }
   },
   "variables":{
      "subnetName":{
         "AppGWSnet":"[concat(parameters('appGatewayPrefix'),'-subnet')]",
         "AnalyticsSnet":"[concat(parameters('analyticsPrefix'),'-subnet')]",
         "BastionSnet":"AzureBastionSubnet",
         "SFTPSnet":"[concat(parameters('sftpPrefix'),'-subnet')]",
         "dataintegrationSnet":"[concat(parameters('dataIntegrationPrefix'),'-subnet')]",
         "APPSnet":"[concat(parameters('appPrefix'),'-subnet')]",
         "DBSnet":"[concat(parameters('DBPrefix'),'-subnet')]",
         "WebSnet":"[concat(parameters('webPrefix'),'-subnet')]",
         "IAMConfigSnet":"[concat(parameters('IamConfigPrefix'),'-subnet')]"
      },
      "networkSecurityGroupName":{
         "AppGWnsg":"[concat(parameters('appGatewayPrefix'),'-nsg')]",
         "Analyticsnsg":"[concat(parameters('analyticsPrefix'),'-nsg')]",
         "Bastionnsg":"[concat(parameters('BastionPrefix'),'-nsg')]",
         "SFTPnsg":"[concat(parameters('sftpPrefix'),'-nsg')]",
         "dataintegrationnsg":"[concat(parameters('dataIntegrationPrefix'),'-nsg')]",
         "APPnsg":"[concat(parameters('appPrefix'),'-nsg')]",
         "DBnsg":"[concat(parameters('DBPrefix'),'-nsg')]",
         "Webnsg":"[concat(parameters('webPrefix'),'-nsg')]",
         "IAMConfignsg":"[concat(parameters('IamConfigPrefix'),'-nsg')]"
      },
      "applicationGatewayId": "[resourceId('Microsoft.Network/applicationGateways', parameters('applicationGatewayName'))]"
   },
   "resources":[
      {
         "type":"Microsoft.Network/virtualNetworks",
         "apiVersion":"2018-11-01",
         "name":"[parameters('virtualNetworkName')]",
         "location":"[resourceGroup().location]",
         "dependsOn":[
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').AppGWnsg)]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').Analyticsnsg)]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').Bastionnsg)]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').SFTPnsg)]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').dataintegrationnsg)]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').APPnsg)]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').AppGWnsg)]",
            "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').webnsg)]"
            // "[resourceId('Microsoft.Network/ddosProtectionPlans', parameters('ddosProtectionPlanName'))]"
         ],
         "properties":{
            "addressSpace":{
               "addressPrefixes":[
                  "[parameters('vnetaddressPrefix')]"
               ]
            },
            // "enableDdosProtection": "[parameters('ddosProtectionPlanEnabled')]",
            //  "ddosProtectionPlan": {
            //    "id": "[resourceId('Microsoft.Network/ddosProtectionPlans', parameters('ddosProtectionPlanName'))]"
            // },
            "subnets":[
               {
                  "name":"[variables('subnetName').AppGWSnet]",
                  "properties":{
                     "addressPrefix":"[parameters('gwsnetaddressPrefix')]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').AppGWnsg)]"
                     }
                  }
               },
               {
                  "name":"[variables('subnetName').AnalyticsSnet]",
                  "properties":{
                     "addressPrefix":"[parameters('analyticsnetaddressPrefix')]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').Analyticsnsg)]"
                     }
                  }
               },
               {
                  "name":"[variables('subnetName').BastionSnet]",
                  "properties":{
                     "addressPrefix":"[parameters('bastionsnetaddressPrefix')]"
                     // "networkSecurityGroup":{
                     //    "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').Bastionnsg)]"
                     // }
                  }
               },
               {
                  "name":"[variables('subnetName').SFTPSnet]",
                  "properties":{
                     "addressPrefix":"[parameters('sftpsnetaddressPrefix')]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').SFTPnsg)]"
                     }
                  }
               },
               {
                  "name":"[variables('subnetName').dataintegrationSnet]",
                  "properties":{
                     "addressPrefix":"[parameters('dataintegrationsnetaddressPrefix')]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').dataintegrationnsg)]"
                     }
                  }
               },
               {
                  "name":"[variables('subnetName').APPSnet]",
                  "properties":{
                     "addressPrefix":"[parameters('appsnetaddressPrefix')]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').APPnsg)]"
                     },
                     "natGateway": {
                         "id": "[resourceId('Microsoft.Network/natGateways', parameters('natgatewayname'))]"
                     }
                  }
               },
               {
                  "name":"[variables('subnetName').DBSnet]",
                  "properties":{
                     "addressPrefix":"[parameters('DBsnetaddressPrefix')]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').DBnsg)]"
                     }
                  }
               },
               {
                  "name":"[variables('subnetName').websnet]",
                  "properties":{
                     "addressPrefix":"[parameters('websnetaddressPrefix')]",
                     "networkSecurityGroup":{
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').webnsg)]"
                     }
                  }
               },
               {
                  "name":"[variables('subnetName').IAMConfigSnet]",
                  "properties":{
                     "addressPrefix":"[parameters('iamconfigaddressPrefix')]"
                     // "networkSecurityGroup":{
                     //    "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName').webnsg)]"
                     // }
                  }
               }
            ]
            
         }
          
         
      },
      {
         "apiVersion":"2018-11-01",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName').AppGWnsg]",
         "location":"[resourceGroup().location]",
         "properties":{
            "securityRules":[
               {
                  "name":"Allow_Client",
                  "properties":{
                     "description":"Allow FE Subnet",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"443",
                     "sourceAddressPrefix":"[parameters('ClientIpname')]",
                     "destinationAddressPrefix":"[parameters('gwsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Inbound"
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2017-10-01",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName').webnsg]",
         "location":"[resourceGroup().location]",
         "properties":{
            "securityRules":[
               {
                  "name":"Allow_Bastion",
                  "properties":{
                     "description":"Allow Bastion Subnet",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"3389",
                     "sourceAddressPrefix":"[parameters('bastionsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('websnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"Allow_Gateway_Inbound",
                  "properties":{
                     "description":"Allow_Gateway_Inbound",
                     "protocol":"TCP",
                     "sourcePortRange":"*",
                     "destinationPortRanges": ["8543","8643", "8743", "8843" ],
                     "sourceAddressPrefix":"[parameters('gwsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('websnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":101,
                     "direction":"Inbound"
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2018-11-01",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName').Analyticsnsg]",
         "location":"[resourceGroup().location]",
         "properties":{
            "securityRules":[
               {
                  "name":"Allow_GW",
                  "properties":{
                     "description":"Allow GW Subnet",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"443",
                     "sourceAddressPrefix":"[parameters('gwsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('analyticsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"Allow_bastion",
                  "properties":{
                     "description":"Allow Bastion services",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"3389",
                     "sourceAddressPrefix":"[parameters('bastionsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('analyticsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":101,
                     "direction":"Inbound"
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2018-11-01",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName').DBnsg]",
         "location":"[resourceGroup().location]",
         "properties":{
            "securityRules":[
               {
                  "name":"Allow_Analytics",
                  "properties":{
                     "description":"Allow Analytics Subnet",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"1443",
                     "sourceAddressPrefix":"[parameters('analyticsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('dbsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"allow_app_subnet",
                  "properties":{
                     "description":"Allow inbound redirect traffic to Managed Instance inside the virtual network",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"1433",
                     "sourceAddressPrefix":"[parameters('appsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('dbsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":110,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"allow_data_intergration",
                  "properties":{
                     "description":"Allow inbound geodr traffic inside the virtual network",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"1433",
                     "sourceAddressPrefix":"[parameters('dataintegrationsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('dbsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":115,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"allow_bastion",
                  "properties":{
                     "description":"Allow Bastion inbound traffic",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"3389",
                     "sourceAddressPrefix":"[parameters('bastionsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('dbsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":120,
                     "direction":"Inbound"
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2018-11-01",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName').dataintegrationnsg]",
         "location":"[resourceGroup().location]",
         "properties":{
            "securityRules":[
               {
                  "name":"Allow_Bastion",
                  "properties":{
                     "description":"Allow Bastion Service",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"3389",
                     "sourceAddressPrefix":"[parameters('bastionsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('dataintegrationsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":100,
                     "direction":"inbound"
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2019-11-01",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName').SFTPnsg]",
         "location":"[resourceGroup().location]",
         "properties":{
            "securityRules":[
               {
                  "name":"Allow_data_integration",
                  "properties":{
                     "description":"Allow Data Integration Subnet",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"2222",
                     "sourceAddressPrefixes":[
                        "[parameters('ClientIpname')]",
                        "[parameters('dataintegrationsnetaddressPrefix')]"
                     ], 
                     "destinationAddressPrefix":"[parameters('sftpsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"Allow_Bastion_services",
                  "properties":{
                     "description":"Allow Bastion services Subnet",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"22",
                     "sourceAddressPrefix":"[parameters('bastionsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('sftpsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":105,
                     "direction":"Inbound"
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2017-10-01",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName').APPnsg]",
         "location":"[resourceGroup().location]",
         "properties":{
            "securityRules":[
               {
                  "name":"Allow_data_integration",
                  "properties":{
                     "description":"Allow_data_integration",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"443",
                     "sourceAddressPrefix":"[parameters('dataintegrationsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('appsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"Allow_Web_subnet",
                  "properties":{
                     "description":"Allow_Web_subnet",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRanges":["8543","8643","8743","8843"],
                     "sourceAddressPrefix":"[parameters('websnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('appsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":101,
                     "direction":"Inbound"
                  }
               },
               {
                  "name":"Allow_Bastion_Services",
                  "properties":{
                     "description":"Allow_Bastion_Services",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRanges":["22","3389"],
                     "sourceAddressPrefix":"[parameters('bastionsnetaddressPrefix')]",
                     "destinationAddressPrefix":"[parameters('appsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":102,
                     "direction":"inbound"
                  }
               }
            ]
         }
      },
      {
         "apiVersion":"2018-11-01",
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('networkSecurityGroupName').Bastionnsg]",
         "location":"[resourceGroup().location]",
         "properties":{
            "securityRules":[
               {
                  "name":"Allow_Network",
                  "properties":{
                     "description":"Allow Admin",
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"443",
                     "sourceAddressPrefix":"[parameters('ConnectBastionIpname')]",
                     "destinationAddressPrefix":"[parameters('bastionsnetaddressPrefix')]",
                     "access":"Allow",
                     "priority":100,
                     "direction":"Inbound"
                  }
               }
            ]
         }
      },
      {
        "type": "Microsoft.Network/natGateways",
        "apiVersion": "2020-05-01",
        "name": "[parameters('natgatewayname')]",
        "location": "[resourceGroup().location]",
        "sku": {
            "name": "Standard"
        },
        "properties": {
                "publicIPAddresses": [
                    {
                        "id": "[resourceId('Microsoft.Network/publicIpAddresses/', parameters('publicIpAddressForNatGateway'))]"
                    }
                ],
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": [
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('publicIpAddressForNatGateway'))]"
            ]
      },
      {
          "type": "Microsoft.Network/publicIpAddresses",
          "apiVersion": "2020-05-01",
          "name": "[parameters('publicIpAddressForNatGateway')]",
          "location":"[resourceGroup().location]",
          "sku": {
              "name": "Standard"
          },
          "properties": {
              "publicIPAllocationMethod": "Static"
          }
      },
      {
          "type": "Microsoft.Network/publicIpAddresses",
          "apiVersion": "2020-05-01",
          "name": "[parameters('publicIpAddressForBastion')]",
          "location":"[resourceGroup().location]",
          "sku": {
              "name": "Standard"
          },
          "properties": {
              "publicIPAllocationMethod": "Static"
          }
      },
      // {
      //    "type": "Microsoft.Network/ddosProtectionPlans",
      //    "apiVersion": "2020-11-01",
      //    "name": "[parameters('ddosProtectionPlanName')]",
      //    "location": "[resourceGroup().location]"
      // },
      {
          "type": "Microsoft.Network/bastionHosts",
          "apiVersion": "2019-04-01",
          "name": "[parameters('bastionName')]",
          "location": "[resourceGroup().location]",
          "dependsOn": [
              "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
              "[resourceId( 'Microsoft.Network/publicIpAddresses', parameters('publicIpAddressForBastion'))]"
          ],
          "properties": {
              "ipConfigurations": [
                  {
                      "name": "IpConf",
                      "properties": {
                          "subnet": {
                              "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets',parameters('virtualNetworkName'),'AzureBastionSubnet')]"
                          },
                          "publicIPAddress": {
                              "id": "[resourceId( 'Microsoft.Network/publicIpAddresses', parameters('publicIpAddressForBastion'))]"
                          }
                      }
                  }
              ]
          }
      },
      {
            "name": "[parameters('applicationGatewayName')]",
            "type": "Microsoft.Network/applicationGateways",
            "apiVersion": "2019-09-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]",
                "[concat('Microsoft.Network/publicIPAddresses/', parameters('publicIpAddressGateway'))]"
            ],
            "tags": {},
            "properties": {
                "sku": {
                    "name": "[parameters('AppGatewaySkuSize')]",
                    "tier": "[parameters('AppGatewayTier')]",
                    "capacity":"[parameters('AppGatewayCapacity')]"
                },
                "gatewayIPConfigurations": [
                    {
                        "name": "appGatewayIpConfig",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets',parameters('virtualNetworkName'),variables('subnetName').AppGWSnet)]"
                            }
                        }
                    }
                ],
                "frontendIPConfigurations": [
                    {
                        "name": "appGwPublicFrontendIp",
                        "properties": {
                            "PublicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIpAddressGateway'))]"
                            }
                        }
                    }
                ],
                "frontendPorts": [
                    {
                        "name": "port_80",
                        "properties": {
                            "Port": 80
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "mybackenpool",
                        "properties": {
                            "backendAddresses": []
                        }
                    }
                ],
                "backendHttpSettingsCollection": [
                    {
                        "name": "incomingpublichttp",
                        "properties": {
                            "Port": 80,
                            "Protocol": "Http",
                            "cookieBasedAffinity": "Disabled",
                            "requestTimeout": 20
                        }
                    }
                ],
                "httpListeners": [
                    {
                        "name": "incomingpublic",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(variables('applicationGatewayId'), '/frontendIPConfigurations/appGwPublicFrontendIp')]"
                            },
                            "frontendPort": {
                                "id": "[concat(variables('applicationGatewayId'), '/frontendPorts/port_80')]"
                            },
                            "protocol": "Http",
                            "sslCertificate": null
                        }
                    }
                ],
                "requestRoutingRules": [
                    {
                        "Name": "incomingpublic",
                        "properties": {
                            "RuleType": "Basic",
                            "httpListener": {
                                "id": "[concat(variables('applicationGatewayId'), '/httpListeners/incomingpublic')]"
                            },
                            "backendAddressPool": {
                                "id": "[concat(variables('applicationGatewayId'), '/backendAddressPools/mybackenpool')]"
                            },
                            "backendHttpSettings": {
                                "id": "[concat(variables('applicationGatewayId'), '/backendHttpSettingsCollection/incomingpublichttp')]"
                            }
                        }
                    }
                ],
                "enableHttp2": false,
                "sslCertificates": [],
                "probes": [],
               "webApplicationFirewallConfiguration": {
                    "enabled": true,
                    "firewallMode": "Detection",
                    "ruleSetType": "OWASP",
                    "ruleSetVersion": "3.0"
                }
            }
        },
        {
            "apiVersion": "2019-02-01",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIpAddressGateway')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        }
   ],
   "outputs":{
     
   }
}
